<resources>
    <string name="app_name">Geopup</string>
    <string name="title_AddZoneActivity">Add a zone</string>
    <string name="title_ZoneListActivity">Zone list</string>
    <string name="zone_textView">Choose a zone type</string>
    <string name="name_textView">Choose a name</string>
    <string name="name_hint">Enter a name for the zone</string>
    <string name="map_ButtonText">Choose zone on map</string>
    <string name="gozone_button_text">Go</string>
    <string name="nogozone_button_text">No-go</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_button_text">Submit</string>

    <string name="hours_text">Hours per week (Optional)</string>
    <string name="hours_hint">Enter # of hours to spend on this zone</string>
    <string name="title_activity_maps">Choose A Zone</string>

    <string name="drawzone_text">Draw Zone</string>
    <string name="Retry_text">Retry</string>
    <string name="Done_text">Done</string>
    <string name="Cancel_text">Cancel</string>

    <string name="menu_item_add_zone_text">Add new zone</string>
    <string name="menu_item_zone_list_text">Zone List</string>

    <string name="food_btn">Give Food (60 pts)</string>
    <string name="treat_btn">Give Treat (120 pts)</string>
    <string name="milk_btn">Heal (180 pts)</string>

    <string name="food_txt">-20</string>
    <string name="treat_txt">-50</string>
    <string name="heal_txt">-100</string>


    <string name="health_text">Health</string>
    <string name="joy_text">Joy</string>
    <string name="hunger_text">Hunger</string>
    <string name="points_text">Points</string>


</resources>
