<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#433B45">

    <TextView
        android:id="@+id/points_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_text"
        android:layout_gravity="center"
        android:background="#433B45"
        android:textColor="#FFFFFF"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="18dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/pet_imageview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/health_textview"
                android:text="@string/health_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/joy_textview"
                android:text="@string/joy_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/hunger_textview"
                android:text="@string/hunger_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/heal_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk_btn"
                android:layout_weight="1"
                android:background="#FFD700"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/treat_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treat_btn"
                android:layout_weight="1"
                android:background="#FFD700"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/food_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_btn"
                android:layout_weight="1"
                android:background="#FFD700"
                android:layout_margin="2dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>