<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">


    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.groupproject.MapsActivity" />

    <FrameLayout
        android:id="@+id/fram_map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btn_draw_State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawzone_text"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:background="#18A361"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btn_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/Done_text"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_Retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#427F58"
            android:text="@string/Retry_text"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#BF2C32"
            android:text="@string/Cancel_text"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_gravity="bottom|left"
            android:textColor="#FFFFFF"
            />

        <EditText
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="98dp"
            android:hint="Search Location"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxLines="1"
            android:lines="1"
            android:textSize="20dp"
            android:inputType="text"
            android:background="#FFFFFF" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="38dp"
            android:background="#8B9097"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="255dp"
            android:src="@android:drawable/ic_menu_search"
            />
    </FrameLayout>
</FrameLayout>
